[package]
description = "Winit's GTK backend"
documentation = "https://docs.rs/winit-gtk"
edition.workspace = true
license.workspace = true
name = "winit-gtk"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["x11", "wayland"]

serde = ["dep:serde", "bitflags/serde", "smol_str/serde", "dpi/serde"]
x11 = ["x11-dl", "gdkx11-sys"]
wayland = ["gdkwayland-sys"]

[dependencies]
bitflags.workspace = true
cursor-icon.workspace = true
dpi.workspace = true
rwh_06.workspace = true
serde = { workspace = true, optional = true }
smol_str.workspace = true
tracing.workspace = true
winit-core.workspace = true

# Platform-specific
gtk = "0.18"
gdkx11-sys = { version = "0.18", optional = true }
gdkwayland-sys = { version = "0.18", optional = true }
crossbeam-channel = "0.5"
async-channel = "2.5"
x11-dl = { workspace = true, optional = true }
winit-common = { workspace = true, features = ["free-unix"] }

[package.metadata.docs.rs]
all-features = true
