[package]
description = "Winit's GTK backend"
documentation = "https://docs.rs/winit-gtk"
edition.workspace = true
license.workspace = true
name = "winit-gtk"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["x11", "wayland"]

serde = ["dep:serde", "bitflags/serde", "smol_str/serde", "dpi/serde"]
x11 = ["gdk-x11-sys"]
wayland = ["gdk-wayland-sys"]

[dependencies]
bitflags.workspace = true
cursor-icon.workspace = true
dpi.workspace = true
rwh_06.workspace = true
serde = { workspace = true, optional = true }
smol_str.workspace = true
tracing.workspace = true
winit-core.workspace = true

# Platform-specific
gtk = { package = "gtk4", version = "0.10" }
gdk-x11-sys = { package = "gdk4-x11-sys", version = "0.10", optional = true }
gdk-wayland-sys = { package = "gdk4-wayland-sys", version = "0.10", optional = true }
crossbeam-channel = "0.5"
async-channel = "2.5"
winit-common = { workspace = true, features = ["free-unix"] }

[package.metadata.docs.rs]
all-features = true
